fin_del_portafolio

--- a/index.html
+++ b/index.html
@@ -26,13 +26,10 @@
         </nav>
         <!-- Personal info "Home" -->
         <div id="home" class="home">
-            <h1>Diego Jaldin.</h1>
-            <p>Bienvenido a mi portafolio</p>
-            <div class="home__img">
-                <img class="img_mobile" src="./img/IMG_7846.JPG" alt="portfolio pic mobile">
-                <img class="img_desktop" src="./img/IMG_7846.JPG" alt="portfolio pic desktop">
-            </div>
-            <p><span class="home_span">+5 años</span><br>de experiencia</p>
+            <div class="home__1">
+                <h1>Diego Jaldin.</h1>
+                <p>Bienvenido a mi portafolio.</p>
+                <p><span class="home_span">+5 años</span><br>de experiencia</p>
             <nav>
                 <ul class="nav_ul">
                     <li>
@@ -70,6 +67,12 @@
                     </li>
                 </ul>
             </nav>
+            </div>
+
+            <div class="home__img">
+                <img class="img_mobile" src="./img/IMG_7846.JPG" alt="portfolio pic mobile">
+                <img class="img_desktop" src="./img/IMG_7846.JPG" alt="portfolio pic desktop">
+            </div>
         </div>
         <!-- Personal info "Home" -->
     </header>
