--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     </main>
 
     <footer class="footer">
-        <p>Hecho con <i class='bx bxs-heart'></i> en Academlo</p>
+        <p>Hecho con <i class='bx bxs-heart'></i> en Academlo <a href="https://github.com/DiegoJaldin/Portfolio" target="_blank"><i class='bx bxl-github' id="github"></i></a></p>
     </footer>
 
     
