improve in about me intro

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <main>
         <section class="aboutMe" id="aboutMe">
             <h2>Acerca de mí</h2>
-            <p>Hola, mi nombre es Diego Jaldin, tengo 26 años, soy de Bolivia y estoy estudiando el mundo de la programación y codificación junto con Academlo. Estudie aviación al inicio y ahora me estoy formando para una segunda carrera.</p>
+            <p class="aboutMe__intro">Hola, mi nombre es Diego Jaldin, tengo 26 años, soy de Bolivia y estoy estudiando el mundo de la programación y codificación junto con Academlo. Estudie aviación al inicio y ahora me estoy formando para una segunda carrera.</p>
             <div class="aboutMe__brands">
                 <div>
                     <img class="brands_img" src="./img/logos-imgs/image 9.jpg" alt="UVM Brand">
